--- a/pod.yaml
+++ b/pod.yaml
@@ -5,6 +5,10 @@ metadata:
 spec:
   containers:
     - name: deall-rest-api
-      image: deall-rest-api
+      image: deall-rest-api:0.0.1
       ports:
         - containerPort: 3000
+    - name: mongo
+      image: mongo:latest
+      ports:
+        - containerPort: 27017
